@@ -1,3 +1,6 @@
+2006-03-10  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_MapView.py: try to avoid startup traceback
+
 2006-03-10  Alex Roitman  <shura@gramps-project.org>
 	* src/Plugins.py, src/PluginMgr.py: Move to ReportUtils.
 	* various: use ReportUtils instead of PluginMgr.
